# NochEinWort

./: README.md  app.py  prompts.py  pyproject.toml  recommend.py  scrape.py  translate.py
.github/workflows/: pipeline.yml
database/: client.py
telegram_bot/: callback.py  feedback.py  sender.py
utils/: logging.py
